--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
